# simple-chat

chat/: Cargo.toml  README.md  build.rs
chat/proto/: chat.proto
chat/src/lib/: mod.rs
chat/tests/: integrations.rs
