[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chat-server"
path = "src/bin/server.rs"

[[bin]]
name = "chat-client"
path = "src/bin/client.rs"

[dependencies]
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]}
tonic = "0.12"

[build-dependencies]
tonic-build = "0.12"
