[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
async-channel = "2.3.1"
async-stream = "0.3.6"
chrono = "0.4.38"
color-print = "0.3.6"
futures = "0.3.31"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]}
tokio-stream = "0.1.16"
tonic = "0.12"
uuid = { version = "1.10.0", features = ["fast-rng", "v4"] }

[build-dependencies]
tonic-build = "0.12"
